--- a/review.classdesign.jammy/plugin.xml
+++ b/review.classdesign.jammy/plugin.xml
@@ -15,7 +15,7 @@
       </command>
       <command
             categoryId="review.classdesign.jammy.commands.category"
-            defaultHandler="review.classdesign.jammy.handler.wizard.LoginHandler"
+            defaultHandler="review.classdesign.jammy.handler.LoginHandler"
             id="review.classdesign.jammy.command.login"
             name="Login">
       </command>
@@ -81,13 +81,35 @@
    </extension>
    <extension
          point="org.eclipse.ui.services">
+      <serviceFactory
+            factoryClass="review.classdesign.jammy.service.factory.GoogleServiceFactory">
+         <service></service>
+      </serviceFactory>
+      <serviceFactory
+            factoryClass="review.classdesign.jammy.service.factory.SubmissionServiceFactory">
+         <service></service>
+      </serviceFactory>
       <sourceProvider
-            provider="review.classdesign.jammy.model.session.GoogleSessionProvider">
+            provider="review.classdesign.jammy.service.internal.GoogleSessionProvider">
          <variable
                name="review.classdesign.jammy.logged"
                priorityLevel="workbench">
          </variable>
       </sourceProvider>
+   </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <category
+            id="review.classdesign.jammy.view.category"
+            name="Jammy">
+      </category>
+      <view
+            category="review.classdesign.jammy.view.category"
+            class="review.classdesign.jammy.view.SubmissionView"
+            id="review.classdesign.jammy.view.submission"
+            name="Submission"
+            restorable="true">
+      </view>
    </extension>
 
 </plugin>
