--- a/review.classdesign.jammy/plugin.xml
+++ b/review.classdesign.jammy/plugin.xml
@@ -82,7 +82,7 @@
    <extension
          point="org.eclipse.ui.services">
       <serviceFactory
-            factoryClass="review.classdesign.jammy.service.factory.GoogleServiceFactory">
+            factoryClass="review.classdesign.jammy.service.factory.GoogleSessionServiceFactory">
          <service></service>
       </serviceFactory>
       <serviceFactory
