--- a/review.classdesign.jammy/build.properties
+++ b/review.classdesign.jammy/build.properties
@@ -40,4 +40,5 @@ bin.includes = META-INF/,\
                dependecies/jsr305-1.3.9.jar,\
                dependecies/protobuf-java-2.4.1.jar,\
                dependecies/transaction-api-1.1.jar,\
-               dependecies/xpp3-1.1.4c.jar
+               dependecies/xpp3-1.1.4c.jar,\
+               client_secret.json
