Updates problem generation design.

--- a/review.classdesign.jammy/plugin.xml
+++ b/review.classdesign.jammy/plugin.xml
@@ -66,7 +66,7 @@
       </menuContribution>
       <menuContribution
             allPopups="false"
-            locationURI="popup:review.classdesign.jammy.menu.contest?after=additions">
+            locationURI="popup:review.classdesign.jammy.menu.contest?after=contest.contribution">
          <command
                commandId="review.classdesign.jammy.command.opensolver"
                label="Open problem solver"
