--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
 title: Jammy
-email: your-email@domain.com
+email: noadresse@youfool.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Please note that this plugin is not provided by Google. Any responsability
+  is declined if a bug occurs when you are using it in a real contest condition.
 baseurl: "/review.classdesign.jammy" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: Faylixe
