Fix module pom issue

--- a/review.classdesign.jammy/pom.xml
+++ b/review.classdesign.jammy/pom.xml
@@ -6,6 +6,7 @@
     <groupId>review.classdesign</groupId>
     <artifactId>Jammy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>review.classdesign</groupId>
   <artifactId>jammy-core</artifactId>
