--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <modules>
     <!-- Jammy core -->
     <module>review.classdesign.jammy.core</module>
+    <module>review.classdesign.jammy.core.tests</module>
     <module>review.classdesign.jammy.ui</module>
     <module>review.classdesign.jammy.addons.java</module>
     <!-- TODO : Add extension and features -->
@@ -37,6 +38,11 @@
           <artifactId>tycho-maven-plugin</artifactId>
           <version>${tycho.version}</version>
           <extensions>true</extensions>
+        </plugin>
+        <plugin>
+            <groupId>org.eclipse.tycho</groupId>
+            <artifactId>tycho-surefire-plugin</artifactId>
+            <version>${tycho.version}</version>
         </plugin>
         <plugin>
           <groupId>org.eclipse.tycho</groupId>
