--- a/review.classdesign.jammy.core/.classpath
+++ b/review.classdesign.jammy.core/.classpath
@@ -1,43 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="dependecies/commons-logging-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-android-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-appengine-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-gson-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-jackson2-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-java6-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-protobuf-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-servlet-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-api-client-xml-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-android-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-appengine-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-gson-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-jackson-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-jackson2-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-jdo-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-protobuf-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-http-client-xml-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-oauth-client-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-oauth-client-appengine-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-oauth-client-java6-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-oauth-client-jetty-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/google-oauth-client-servlet-1.20.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/gson-2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/guava-jdk5-13.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/httpclient-4.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/httpcore-4.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/jackson-core-2.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/jackson-core-asl-1.9.11.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/jdo2-api-2.3-eb.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/jetty-6.1.26.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/jetty-util-6.1.26.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/jsr305-1.3.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/protobuf-java-2.4.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/transaction-api-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependecies/xpp3-1.1.4c.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependecies/jsoup-1.8.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="dependecies/googlecodejam-client-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
