Removes obsolete embbed dependencies. Updating data transfert between component.

--- a/review.classdesign.jammy.core/build.properties
+++ b/review.classdesign.jammy.core/build.properties
@@ -1,7 +1,6 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
+bin.includes = .,\
                plugin.xml,\
                dependecies/googlecodejam-client-0.0.1-SNAPSHOT.jar,\
                dependecies/jsoup-1.8.3.jar
