Replaces project(s) suffix review.classdesign by fr.faylixe

--- a/review.classdesign.jammy.ui/.project
+++ b/review.classdesign.jammy.ui/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>review.classdesign.jammy.ui</name>
+	<name>fr.faylixe.jammy.ui</name>
 	<comment></comment>
 	<projects>
 	</projects>
