--- a/review.classdesign.jammy.addons.java/.project
+++ b/review.classdesign.jammy.addons.java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>review.classdesign.jammy.addons.java</name>
+	<name>fr.faylixe.jammy.addons.java</name>
 	<comment></comment>
 	<projects>
 	</projects>
