--- a/review.classdesign.jammy.core/pom.xml
+++ b/review.classdesign.jammy.core/pom.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>review.classdesign</groupId>
-    <artifactId>jammy</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>review.classdesign</groupId>
-  <artifactId>review.classdesign.jammy.core</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>eclipse-plugin</packaging>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>review.classdesign</groupId>
+		<artifactId>jammy</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>review.classdesign</groupId>
+	<artifactId>review.classdesign.jammy.core</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>eclipse-plugin</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>fr.faylixe</groupId>
+			<artifactId>googlecodejam-client</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+	</dependencies>
 </project>
