--- a/fr.faylixe.jammy.feature/pom.xml
+++ b/fr.faylixe.jammy.feature/pom.xml
@@ -3,12 +3,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>review.classdesign</groupId>
+    <groupId>fr.faylixe</groupId>
     <artifactId>jammy</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <groupId>review.classdesign</groupId>
-  <artifactId>jammy-feature</artifactId>
+  <groupId>fr.faylixe</groupId>
+  <artifactId>fr.faylixe.jammy.feature</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
 </project>
