Updates MANIFEST and POM.

--- a/pom.xml
+++ b/pom.xml
@@ -1,51 +1,58 @@
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>fr.faylixe</groupId>
-  <artifactId>jammy</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>fr.faylixe</groupId>
+	<artifactId>jammy</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-  <modules>
-    <!-- Jammy core -->
-    <module>fr.faylixe.jammy.core</module>
-    <module>fr.faylixe.jammy.ui</module>
-    <module>fr.faylixe.jammy.addons.java</module>
-    <!-- TODO : Add extension and features -->
-  </modules>
+	<modules>
+		<!-- Jammy core -->
+		<module>fr.faylixe.jammy.core</module>
+		<module>fr.faylixe.jammy.ui</module>
+		<module>fr.faylixe.jammy.addons.java</module>
+		<!-- TODO : Add extension and features -->
+	</modules>
 
-  <properties>
-    <tycho.version>0.23.0</tycho.version>
-    <luna.url>http://download.eclipse.org/releases/luna</luna.url>
-  </properties>
+	<properties>
+		<tycho.version>0.23.0</tycho.version>
+		<luna.url>http://download.eclipse.org/releases/luna</luna.url>
+	</properties>
 
-  <repositories>
-    <repository>
-        <id>luna</id>
-        <url>${luna.url}</url>
-        <layout>p2</layout>
-    </repository>
-  </repositories>
+	<repositories>
+		<repository>
+			<id>luna</id>
+			<url>${luna.url}</url>
+			<layout>p2</layout>
+		</repository>
+	</repositories>
+	
+	<dependencies>
+		<dependency>
+			<groupId>fr.faylixe</groupId>
+			<artifactId>googlecodejam-client-osgi</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+	</dependencies>
 
-  <build>
-      <plugins>
-        <plugin>
-          <groupId>org.eclipse.tycho</groupId>
-          <artifactId>tycho-maven-plugin</artifactId>
-          <version>${tycho.version}</version>
-          <extensions>true</extensions>
-        </plugin>
-        <plugin>
-          <groupId>org.eclipse.tycho</groupId>
-          <artifactId>target-platform-configuration</artifactId>
-          <version>${tycho.version}</version>
-          <configuration>
-            <resolver>p2</resolver>
-          </configuration>
-        </plugin>
-      </plugins>
-  </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<resolver>p2</resolver>
+					<pomDependencies>consider</pomDependencies>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
