--- a/fr.faylixe.jammy.core/build.properties
+++ b/fr.faylixe.jammy.core/build.properties
@@ -2,5 +2,4 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               googlecodejam-client-1.1.2-jar-with-dependencies.jar
+               plugin.xml
