--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>fr.faylixe</groupId>
+			<artifactId>googlecodejam-client</artifactId>
+			<version>1.2.1</version>			
+		</dependency>
+		<dependency>
+			<groupId>fr.faylixe</groupId>
 			<artifactId>googlecodejam-client-osgi</artifactId>
-			<version>1.2.12</version>
+			<version>1.2.13</version>
 		</dependency>
 	</dependencies>
 
