--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
 			<version>1.2.15</version>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.apache.logging.log4j.osgi</groupId>
+			<artifactId>log4j-osgi</artifactId>
+			<version>2.0-rc1</version>
 		</dependency>
 	</dependencies>
 
