--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>googlecodejam-client-osgi</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-asm</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
