--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,16 @@
 			<artifactId>googlecodejam-client-osgi</artifactId>
 			<version>1.2.21</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.ops4j.pax.logging</groupId>
+		    <artifactId>pax-logging-api</artifactId>
+		    <version>1.8.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.ops4j.pax.logging</groupId>
+		    <artifactId>pax-logging-service</artifactId>
+		    <version>1.8.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
