--- a/fr.faylixe.jammy.core/plugin.xml
+++ b/fr.faylixe.jammy.core/plugin.xml
@@ -7,29 +7,71 @@
    <extension
          point="org.eclipse.ui.services">
       <serviceFactory
-            factoryClass="fr.faylixe.jammy.core.service.factory.SubmissionServiceFactory">
+            factoryClass="fr.faylixe.jammy.core.service.SubmissionServiceFactory">
          <service
                serviceClass="fr.faylixe.jammy.core.service.ISubmissionService"></service>
       </serviceFactory>
+      <sourceProvider
+            provider="fr.faylixe.jammy.core.internal.JammySourceProvider">
+         <variable
+               name="fr.faylixe.jammy.logged"
+               priorityLevel="workbench">
+         </variable>
+      </sourceProvider>
    </extension>
    <extension
          point="org.eclipse.ui.commands">
       <category
-            id="review.classdesign.jammy.commands.category"
+            id="fr.faylixe.jammy.commands.category"
             name="Jammy">
       </category>
       <command
-            categoryId="review.classdesign.jammy.commands.category"
+            categoryId="fr.faylixe.jammy.commands.category"
             defaultHandler="fr.faylixe.jammy.core.command.OpenSolverCommand"
-            id="review.classdesign.jammy.command.opensolver"
+            id="fr.faylixe.jammy.command.opensolver"
             name="Open problem solver">
       </command>
       <command
-            categoryId="review.classdesign.jammy.commands.category"
+            categoryId="fr.faylixe.jammy.commands.category"
             defaultHandler="fr.faylixe.jammy.core.command.RunSampleDatasetCommand"
-            id="review.classdesign.jammy.command.runtest"
+            id="fr.faylixe.jammy.command.runtest"
             name="Run sample dataset">
       </command>
+      <command
+            categoryId="fr.faylixe.jammy.commands.category"
+            defaultHandler="fr.faylixe.jammy.core.command.LoginCommand"
+            id="fr.faylixe.jammy.command.login"
+            name="Login">
+      </command>
+      <command
+            categoryId="fr.faylixe.jammy.commands.category"
+            defaultHandler="fr.faylixe.jammy.core.command.LogoutCommand"
+            id="fr.faylixe.jammy.command.logout"
+            name="Logout">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            commandId="fr.faylixe.jammy.command.login">
+         <enabledWhen>
+            <with
+                  variable="fr.faylixe.jammy.logged">
+               <equals
+                     value="false">
+               </equals>
+            </with></enabledWhen>
+      </handler>
+      <handler
+            commandId="fr.faylixe.jammy.command.logout">
+         <enabledWhen>
+            <with
+                  variable="fr.faylixe.jammy.logged">
+               <equals
+                     value="true">
+               </equals>
+            </with></enabledWhen>
+      </handler>
    </extension>
 
 </plugin>
